Removed overflow-x auto, fixing score-popup clip

--- a/static/css/pages/beatmapset.css
+++ b/static/css/pages/beatmapset.css
@@ -440,7 +440,6 @@ body {
   border-radius: 16px;
 
   font-size: 0.5em;
-  overflow-x: auto;
 }
 .scores-container > .default-formatting {
   display: flex;
